# voronoi-diagram

./: CMakeLists.txt  LICENSE  README
src/: CMakeLists.txt  coastline.cpp  coastline.h  eventCalender.cpp  eventCalender.h  exception.h  fortunesAlgorithm.cpp  fortunesAlgorithm.h  global.h  gui.cpp  gui.h  main.cpp  voronoiDiagram.cpp  voronoiDiagram.h
